src/test/deca/context/invalid/created/appel_meth/appel_method_bool.deca
// Description :
//   	appel d'une methode sur un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9 : (3.71) Le membre gauche n'est pas de type 'class'

{
boolean a;
a.b();
}